# EmbeddedLibrary

./: .gitignore  CMakeLists.txt
boards/: CMakeLists.txt
cmake/: embedded_flags.cmake  toolchain-arm-none-eabi.cmake
core/: CMakeLists.txt
examples/: CMakeLists.txt
examples/blinky/: main.c
platform/: CMakeLists.txt
platform/stm32n6/: linker.ld  startup.c
platform/stm32n6/include/: platform.h
platform/stm32n6/system/: platform_init.c
tests/: CMakeLists.txt
tests/sanity/: main.c
